Fix other java 21 upgrade related errors